# WinGIF

./: .gitignore  AGENTS.md  BUGFIX.md  CLAUDE.md  Cargo.toml  MODERN_UI.md  OUTLINE_FIX.md  README.md  package-lock.json  readme.txt
.claude/: settings.local.json
crates/app/: Cargo.toml
crates/app/src/: main.rs  main_egui.rs  state.rs  tray.rs  ui.rs  ui_egui.rs
crates/capture_wgc/: Cargo.toml
crates/capture_wgc/src/: capture.rs  d3d11.rs  frame.rs  lib.rs
crates/export/: Cargo.toml
crates/export/src/: gif.rs  lib.rs  png.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: lib.rs  outline.rs  render.rs  screenshot.rs  selection.rs  window.rs
