[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tinycapture"
path = "src/main.rs"

[dependencies]
windows.workspace = true
overlay = { path = "../overlay" }
capture_wgc = { path = "../capture_wgc" }
export = { path = "../export" }
rfd.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true

[build-dependencies]
embed-resource = "2.4"
