[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "tinycapture-modern"

[[bin]]
name = "tinycapture"
path = "src/main.rs"

[[bin]]
name = "tinycapture-modern"
path = "src/main_egui.rs"

[dependencies]
windows.workspace = true
overlay = { path = "../overlay" }
capture_wgc = { path = "../capture_wgc" }
export = { path = "../export" }
rfd.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true

# Modern UI framework
eframe = "0.28"
egui = "0.28"
raw-window-handle = "0.6"

[build-dependencies]
embed-resource = "2.4"
