[package]
name = "capture_wgc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
windows.workspace = true
image.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
