[package]
name = "overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
windows.workspace = true
capture_wgc = { path = "../capture_wgc" }
crossbeam-channel.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true
